# bot_dude

./: .gitignore  README.md  pyproject.toml
src/: __main__.py
src/bot/: handler.py  parse.py  test.py  utils.py
