[tool.poetry]
name = "bot_dude"
version = "0.1.0"
description = ""
authors = ["smapl <a.mustafin00@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
vk-api = "^11.9.1"
requests = "^2.25.1"
bs4 = "^0.0.1"
loguru = "^0.5.3"
lxml = "^4.6.2"
html5lib = "^1.1"
schedule = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
